[gd_scene load_steps=4 format=2]

[ext_resource path="res://VisualNovel/VNEditor.gd" type="Script" id=1]
[ext_resource path="res://VisualNovel/LinkBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://VisualNovel/VNReader.tscn" type="PackedScene" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="LinkBar" parent="Panel/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 1440.0
size_flags_horizontal = 3

[node name="Layout" type="VBoxContainer" parent="Panel/HBoxContainer"]
editor/display_folded = true
margin_left = 4.0
margin_right = 484.0
margin_bottom = 1440.0
rect_min_size = Vector2( 480, 435 )

[node name="id_info" type="PanelContainer" parent="Panel/HBoxContainer/Layout"]
editor/display_folded = true
margin_right = 480.0
margin_bottom = 102.0

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/Layout/id_info"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 95.0

[node name="id" type="Label" parent="Panel/HBoxContainer/Layout/id_info/GridContainer"]
margin_right = 58.0
margin_bottom = 14.0
size_flags_vertical = 5
text = "ID"

[node name="id_input" type="LineEdit" parent="Panel/HBoxContainer/Layout/id_info/GridContainer"]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 42.0

[node name="Next_id" type="Label" parent="Panel/HBoxContainer/Layout/id_info/GridContainer"]
margin_top = 46.0
margin_right = 58.0
margin_bottom = 60.0
text = "Next ID"

[node name="next_id_input" type="LineEdit" parent="Panel/HBoxContainer/Layout/id_info/GridContainer"]
margin_top = 64.0
margin_right = 58.0
margin_bottom = 88.0

[node name="sentenceInfo" type="PanelContainer" parent="Panel/HBoxContainer/Layout"]
editor/display_folded = true
margin_top = 106.0
margin_right = 480.0
margin_bottom = 212.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/Layout/sentenceInfo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 99.0

[node name="sentence_info" type="Label" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer"]
margin_right = 466.0
margin_bottom = 14.0
text = "Sentence Info"
align = 1

[node name="sentence_txt" type="HBoxContainer" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer"]
editor/display_folded = true
margin_top = 18.0
margin_right = 466.0
margin_bottom = 42.0
alignment = 1

[node name="sentence_input" type="LineEdit" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer/sentence_txt"]
margin_left = 192.0
margin_right = 250.0
margin_bottom = 24.0
expand_to_text_length = true
placeholder_text = "Enter A sentence"

[node name="add_sentence" type="Button" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer/sentence_txt"]
margin_left = 254.0
margin_right = 274.0
margin_bottom = 24.0
text = "+"

[node name="sentence_info2" type="HBoxContainer" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer"]
margin_top = 46.0
margin_right = 466.0
margin_bottom = 70.0
alignment = 1

[node name="sent_delay_input" type="LineEdit" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer/sentence_info2"]
margin_left = 150.0
margin_right = 208.0
margin_bottom = 24.0
align = 1
placeholder_text = "Delay"

[node name="sent_speed_input" type="LineEdit" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer/sentence_info2"]
margin_left = 212.0
margin_right = 270.0
margin_bottom = 24.0
align = 1
placeholder_text = "Speed"

[node name="sound_menu" type="OptionButton" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer/sentence_info2"]
margin_left = 274.0
margin_right = 315.0
margin_bottom = 24.0

[node name="sentences_lable" type="Label" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer"]
margin_top = 74.0
margin_right = 466.0
margin_bottom = 88.0
text = "Sentences Made:"

[node name="sentence_list" type="VBoxContainer" parent="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer"]
margin_top = 92.0
margin_right = 466.0
margin_bottom = 92.0

[node name="sceneInfo" type="PanelContainer" parent="Panel/HBoxContainer/Layout"]
margin_top = 216.0
margin_right = 480.0
margin_bottom = 244.0

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/Layout/sceneInfo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 21.0
columns = 3

[node name="musicList" type="GridContainer" parent="Panel/HBoxContainer/Layout/sceneInfo/GridContainer"]
margin_right = 38.0
margin_bottom = 14.0

[node name="Music" type="Label" parent="Panel/HBoxContainer/Layout/sceneInfo/GridContainer/musicList"]
margin_right = 38.0
margin_bottom = 14.0
text = "Music"
align = 1

[node name="background_list" type="GridContainer" parent="Panel/HBoxContainer/Layout/sceneInfo/GridContainer"]
margin_left = 42.0
margin_right = 116.0
margin_bottom = 14.0

[node name="backgorund_label" type="Label" parent="Panel/HBoxContainer/Layout/sceneInfo/GridContainer/background_list"]
margin_right = 74.0
margin_bottom = 14.0
text = "Background"
align = 1

[node name="transition_list" type="GridContainer" parent="Panel/HBoxContainer/Layout/sceneInfo/GridContainer"]
margin_left = 120.0
margin_right = 232.0
margin_bottom = 14.0

[node name="transition_label" type="Label" parent="Panel/HBoxContainer/Layout/sceneInfo/GridContainer/transition_list"]
margin_right = 112.0
margin_bottom = 14.0
text = "Scene Transitions"
align = 1

[node name="characterInfo" type="PanelContainer" parent="Panel/HBoxContainer/Layout"]
editor/display_folded = true
margin_top = 248.0
margin_right = 480.0
margin_bottom = 276.0

[node name="character_layout" type="GridContainer" parent="Panel/HBoxContainer/Layout/characterInfo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 21.0
columns = 3

[node name="char_transition_list" type="GridContainer" parent="Panel/HBoxContainer/Layout/characterInfo/character_layout"]
editor/display_folded = true
margin_right = 63.0
margin_bottom = 14.0

[node name="Transition" type="Label" parent="Panel/HBoxContainer/Layout/characterInfo/character_layout/char_transition_list"]
margin_right = 63.0
margin_bottom = 14.0
text = "Transition"
align = 1

[node name="character_list" type="GridContainer" parent="Panel/HBoxContainer/Layout/characterInfo/character_layout"]
editor/display_folded = true
margin_left = 67.0
margin_right = 127.0
margin_bottom = 14.0

[node name="characterLabel" type="Label" parent="Panel/HBoxContainer/Layout/characterInfo/character_layout/character_list"]
margin_right = 60.0
margin_bottom = 14.0
text = "Character"
align = 1

[node name="expression_list" type="GridContainer" parent="Panel/HBoxContainer/Layout/characterInfo/character_layout"]
margin_left = 131.0
margin_right = 207.0
margin_bottom = 14.0

[node name="expressLabel" type="Label" parent="Panel/HBoxContainer/Layout/characterInfo/character_layout/expression_list"]
margin_right = 76.0
margin_bottom = 14.0
text = "Expressions"
align = 1

[node name="preview_btn" type="Button" parent="Panel/HBoxContainer/Layout"]
margin_top = 280.0
margin_right = 480.0
margin_bottom = 300.0
text = "Preview Scene"

[node name="parse_btn" type="Button" parent="Panel/HBoxContainer/Layout"]
margin_top = 304.0
margin_right = 480.0
margin_bottom = 324.0
text = "Parse JSON"

[node name="VNReader" parent="Panel/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 488.0
margin_top = 720.0
margin_right = 1208.0
margin_bottom = 1440.0
rect_min_size = Vector2( 720, 720 )
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="CheckBox" type="CheckBox" parent="."]
visible = false
margin_right = 24.0
margin_bottom = 24.0

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 20 )
text = "X"
[connection signal="pressed" from="Panel/HBoxContainer/Layout/sentenceInfo/VBoxContainer/sentence_txt/add_sentence" to="." method="add_sentence"]
[connection signal="pressed" from="Panel/HBoxContainer/Layout/preview_btn" to="." method="preview_scene"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
